brat/test/golden/error/empty_into.brat.golden
Error in test/golden/error/empty_into.brat on line 5:
intoErr = |> makeInt
          ^^^^^^^^^^

  Type mismatch when checking makeInt()(())
Expected: (_0 :: Bool)
But got:  (_0 :: Int)


